# memory-manager

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yaml  rust.yaml
enumflags2/: all.html  index.html  struct.BitFlags.html  struct.FromBitsError.html  trait.RawBitFlags.html
enumflags2_derive/: all.html  derive.BitFlags_internal.html  index.html
implementors/enumflags2/: trait.RawBitFlags.js
memory_manager/: all.html  index.html  sidebar-items.js
memory_manager/allocate/: enum.Protection.html  index.html  sidebar-items.js  struct.MegaBlock.html  struct.MegaBlockIterator.html  struct.MegaBlockIteratorMut.html  struct.MegaBlockList.html  struct.MemoryChunk.html  type.ChunkIterator.html  type.ChunkIteratorMut.html
memory_manager/block/: index.html  sidebar-items.js  struct.BlockDescriptor.html  struct.ObjectIterator.html
memory_manager/common/: constant.B.html  constant.GiB.html  constant.KiB.html  constant.MiB.html  fn.assert_aligned.html  fn.consume_as_ref.html  fn.consume_as_slice.html  index.html  sidebar-items.js  struct.Address.html
memory_manager/object/: index.html  sidebar-items.js  struct.Object.html  struct.ObjectDescriptor.html
memory_manager/primitives/: enum.MMapError.html  enum.Protection.html  fn.aligned_allocate_chunk.html  fn.deallocate_chunk.html  fn.get_minimum_alignment.html  fn.get_page_size.html  index.html  sidebar-items.js  type.Result.html
src/: allocate.rs  block.rs  common.rs  lib.rs  memory.rs  object.rs  primitives.rs  utils.rs
syn/: index.html
(+61 files in other folders)
