[package]
name = "memory-manager"
version = "0.1.0"
authors = ["Krantz-XRF <Krantz.XRF@outlook.com>"]
edition = "2018"
repository = "https://github.com/Krantz-XRF/memory-manager.git"
homepage = "https://github.com/Krantz-XRF/memory-manager.git"
license = "AGPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.0-preview1"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
default-features = false
